--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     --dark-gray: hsl(225, 26%, 23%);
     --medium-gray: hsl(225, 21%, 45%);
     --light-gray: hsl(225, 40%, 83%);
+    --error: hsl(0, 96%, 61%);
 
     --font-family: 'Chivo', sans-serif;
 }
@@ -101,6 +102,14 @@ main {
     font-weight: 300;
 }
 
+#error {
+    font-size: 12px;
+    color: var(--error);
+    position: absolute;
+    bottom: 71px;
+    display: none;
+}
+
 /* Form inputs */
 
 .request-container {
@@ -114,7 +123,7 @@ main {
     width: 100%;
     border: none;
     font-family: var(--font-family);
-    font-weight: 700;
+    font-weight: 400;
     padding: 9px 32px 9px 32px;
     border-radius: 28px;
     font-size: 14px;
@@ -134,7 +143,13 @@ main {
 .request-btn {
     background-color: var(--primary);
     color: var(--dark);
-    
+    cursor: pointer;
+    position: relative;
+    font-weight: 700;
+}
+
+.request-btn:hover {
+    background-color: var(--primary-active);
 }
 
 /* Media Queries */
